--- a/src/main/resources/assets/bettertobacco/lang/en_us.json
+++ b/src/main/resources/assets/bettertobacco/lang/en_us.json
@@ -4,5 +4,10 @@
 	"item.bettertobacco.tobacco_seeds_item": "Tobacco seeds",
 	"item.bettertobacco.dried_tobacco_item": "Dried Tobacco",
 	"item.bettertobacco.tobacco_filter_item": "Tobacco Filter",
-	"item.bettertobacco.cigarette_item": "Cigarette"
+	"item.bettertobacco.cigarette_item": "Cigarette",
+	"item.bettertobacco.snus_item": "Snus",
+	"item.bettertobacco.used_snus_item": "Used Snus",
+	"item.bettertobacco.snus_can_item": "Snus can",
+	"item.bettertobacco.tobacco_essence_item": "Tobacco Essence",
+	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot"
 }
