--- a/src/main/resources/assets/bettertobacco/lang/tr_tr.json
+++ b/src/main/resources/assets/bettertobacco/lang/tr_tr.json
@@ -4,5 +4,10 @@
 	"item.bettertobacco.tobacco_seeds_item": "Tütün tohumları",
 	"item.bettertobacco.dried_tobacco_item": "Suv duhan",
 	"item.bettertobacco.tobacco_filter_item": "Kuru tütün",
-	"item.bettertobacco.cigarette_item": "Sigara"
+	"item.bettertobacco.cigarette_item": "Sigara",
+	"item.bettertobacco.snus_item": "Snus",
+	"item.bettertobacco.used_snus_item": "Used Snus",
+	"item.bettertobacco.snus_can_item": "Snus can",
+	"item.bettertobacco.tobacco_essence_item": "Tobacco Essence",
+	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot"
 }
