Updated Lang files and crafting recipes

--- a/src/main/resources/assets/bettertobacco/lang/de_ch.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_ch.json
@@ -6,8 +6,8 @@
 	"item.bettertobacco.tobacco_filter_item": "Tabak Filtär",
 	"item.bettertobacco.cigarette_item": "Zigarrete",
 	"item.bettertobacco.snus_item": "Snus",
-	"item.bettertobacco.used_snus_item": "Used Snus",
-	"item.bettertobacco.snus_can_item": "Snus can",
-	"item.bettertobacco.tobacco_essence_item": "Tobacco Essence",
-	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot"
+	"item.bettertobacco.used_snus_item": "Brauchte Snus",
+	"item.bettertobacco.snus_can_item": "Snus dosä",
+	"item.bettertobacco.tobacco_essence_item": "Tabak Essänz",
+	"item.bettertobacco.tobacco_ingot_item": "Tabak Barrä"
 }
