--- a/src/main/resources/assets/bettertobacco/lang/bs_BA.json
+++ b/src/main/resources/assets/bettertobacco/lang/bs_BA.json
@@ -6,8 +6,8 @@
 	"item.bettertobacco.tobacco_filter_item": "Filter za duhana",
 	"item.bettertobacco.cigarette_item": "Cigareta",
 	"item.bettertobacco.snus_item": "Snus",
-	"item.bettertobacco.used_snus_item": "Used Snus",
-	"item.bettertobacco.snus_can_item": "Snus can",
+	"item.bettertobacco.used_snus_item": "Kullanılan Snus",
+	"item.bettertobacco.snus_can_item": "Snus olabilir",
 	"item.bettertobacco.tobacco_essence_item": "Tobacco Essence",
 	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot"
 }
