New Crafting Recipe for Tobacco ingot, added used cigarette

--- a/src/main/resources/assets/bettertobacco/lang/de_at.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_at.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Ogranztes Schnusl",
 	"item.bettertobacco.snus_can_item": "Snuspackl",
 	"item.bettertobacco.tobacco_essence_item": "Tabakessenz",
-	"item.bettertobacco.tobacco_ingot_item": "Tabakwiafl"
+	"item.bettertobacco.tobacco_ingot_item": "Tabakwiafl",
+	"item.bettertobacco.used_cigarette_item": "Ogranzte Tschick"
 }
