--- a/src/main/resources/assets/bettertobacco/lang/de_ch.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_ch.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Brauchte Snus",
 	"item.bettertobacco.snus_can_item": "Snus dosä",
 	"item.bettertobacco.tobacco_essence_item": "Tabak Essänz",
-	"item.bettertobacco.tobacco_ingot_item": "Tabak Barrä"
+	"item.bettertobacco.tobacco_ingot_item": "Tabak Barrä",
+	"item.bettertobacco.used_cigarette_item": "Brauchte Zigarrete"
 }
