--- a/src/main/resources/assets/bettertobacco/lang/de_de.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_de.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Benutztes Snus",
 	"item.bettertobacco.snus_can_item": "Snusdose",
 	"item.bettertobacco.tobacco_essence_item": "Tabak-Essenz",
-	"item.bettertobacco.tobacco_ingot_item": "Tabakbarren"
+	"item.bettertobacco.tobacco_ingot_item": "Tabakbarren",
+	"item.bettertobacco.used_cigarette_item": "Benutzte Zigarette"
 }
