--- a/src/main/resources/assets/bettertobacco/lang/hu_hu.json
+++ b/src/main/resources/assets/bettertobacco/lang/hu_hu.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Hasznalt snüssz",
 	"item.bettertobacco.snus_can_item": "Snüssz dobosz",
 	"item.bettertobacco.tobacco_essence_item": "Dohany eszencia",
-	"item.bettertobacco.tobacco_ingot_item": "Dohanyrud"
+	"item.bettertobacco.tobacco_ingot_item": "Dohanyrud",
+	"item.bettertobacco.used_cigarette_item": "Used Cigarette"
 }
