--- a/src/main/resources/assets/bettertobacco/lang/tr_tr.json
+++ b/src/main/resources/assets/bettertobacco/lang/tr_tr.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Kullanılan Snus",
 	"item.bettertobacco.snus_can_item": "Snus olabilir",
 	"item.bettertobacco.tobacco_essence_item": "Tütün essans",
-	"item.bettertobacco.tobacco_ingot_item": "Tütün çubuklar"
+	"item.bettertobacco.tobacco_ingot_item": "Tütün çubuklar",
+	"item.bettertobacco.used_cigarette_item": "Used Cigarette"
 }
