--- a/src/main/resources/assets/bettertobacco/lang/sr_sp.json
+++ b/src/main/resources/assets/bettertobacco/lang/sr_sp.json
@@ -9,5 +9,6 @@
 	"item.bettertobacco.used_snus_item": "Used Snus",
 	"item.bettertobacco.snus_can_item": "Snus can",
 	"item.bettertobacco.tobacco_essence_item": "Tobacco Essence",
-	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot"
+	"item.bettertobacco.tobacco_ingot_item": "Tobacco Ingot",
+	"item.bettertobacco.used_cigarette_item": "Used Cigarette"
 }
