--- a/src/main/resources/assets/bettertobacco/lang/de_de.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_de.json
@@ -10,5 +10,14 @@
 	"item.bettertobacco.snus_can_item": "Snusdose",
 	"item.bettertobacco.tobacco_essence_item": "Tabak-Essenz",
 	"item.bettertobacco.tobacco_ingot_item": "Tabakbarren",
-	"item.bettertobacco.used_cigarette_item": "Benutzte Zigarette"
+	"item.bettertobacco.used_cigarette_item": "Benutzte Zigarette",
+	"item.bettertobacco.tobacco_helmet_item": "Tabakhelm",
+	"item.bettertobacco.tobacco_chestplate_item": "Tabakharnisch",
+	"item.bettertobacco.tobacco_leggins_item": "Tabakbeinschutz",
+	"item.bettertobacco.tobacco_shoes_item": "Tabakstiefel",
+	"item.bettertobacco.tobacco_axe_item": "Tabak Axt",
+	"item.bettertobacco.tobacco_pickaxe_item": "Tabak Spitzhacke",
+	"item.bettertobacco.tobacco_hoe_item": "Tabak Hacke",
+	"item.bettertobacco.tobacco_shovel_item": "Tabak Schaufel",
+	"item.bettertobacco.tobacco_sword_item": "Tabak Schwert"
 }
