Added SnusCan functionallity

--- a/src/main/resources/assets/bettertobacco/lang/de_at.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_at.json
@@ -11,7 +11,7 @@
 	"item.bettertobacco.tobacco_essence_item": "Tabakessenz",
 	"item.bettertobacco.tobacco_ingot_item": "Tabakwiafl",
 	"item.bettertobacco.used_cigarette_item": "Ogranzte Tschick",
-	"item.bettertobacco.tobacco_helmet_item": "Tabak Hölm",
+	"item.bettertobacco.tobacco_helmet_item": "Tabak Hoelm",
 	"item.bettertobacco.tobacco_chestplate_item": "Tabak Brustpaunza",
 	"item.bettertobacco.tobacco_leggins_item": "Tabak Schutzhosn",
 	"item.bettertobacco.tobacco_shoes_item": "Tabak Schuach",
