Added armor textures

--- a/src/main/resources/assets/bettertobacco/lang/de_at.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_at.json
@@ -13,7 +13,7 @@
 	"item.bettertobacco.used_cigarette_item": "Ogranzte Tschick",
 	"item.bettertobacco.tobacco_helmet_item": "Tabak Hoelm",
 	"item.bettertobacco.tobacco_chestplate_item": "Tabak Brustpaunza",
-	"item.bettertobacco.tobacco_leggins_item": "Tabak Schutzhosn",
+	"item.bettertobacco.tobacco_leggings_item": "Tabak Schutzhosn",
 	"item.bettertobacco.tobacco_shoes_item": "Tabak Schuach",
 	"item.bettertobacco.tobacco_axe_item": "Tabak Oxt",
 	"item.bettertobacco.tobacco_pickaxe_item": "Tabak Spitzhock",
