--- a/src/main/resources/assets/bettertobacco/lang/de_de.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_de.json
@@ -13,7 +13,7 @@
 	"item.bettertobacco.used_cigarette_item": "Benutzte Zigarette",
 	"item.bettertobacco.tobacco_helmet_item": "Tabakhelm",
 	"item.bettertobacco.tobacco_chestplate_item": "Tabakharnisch",
-	"item.bettertobacco.tobacco_leggins_item": "Tabakbeinschutz",
+	"item.bettertobacco.tobacco_leggings_item": "Tabakbeinschutz",
 	"item.bettertobacco.tobacco_shoes_item": "Tabakstiefel",
 	"item.bettertobacco.tobacco_axe_item": "Tabak Axt",
 	"item.bettertobacco.tobacco_pickaxe_item": "Tabak Spitzhacke",
