--- a/src/main/resources/assets/bettertobacco/lang/en_us.json
+++ b/src/main/resources/assets/bettertobacco/lang/en_us.json
@@ -13,7 +13,7 @@
 	"item.bettertobacco.used_cigarette_item": "Used Cigarette",
 	"item.bettertobacco.tobacco_helmet_item": "Tobacco Helmet",
 	"item.bettertobacco.tobacco_chestplate_item": "Tobacco Chestplate",
-	"item.bettertobacco.tobacco_leggins_item": "Tobacco Leggins",
+	"item.bettertobacco.tobacco_leggings_item": "Tobacco Leggings",
 	"item.bettertobacco.tobacco_shoes_item": "Tobacco Shoes",
 	"item.bettertobacco.tobacco_axe_item": "Tobacco Axe",
 	"item.bettertobacco.tobacco_pickaxe_item": "Tobacco Pickaxe",
