--- a/src/main/resources/assets/bettertobacco/lang/de_ch.json
+++ b/src/main/resources/assets/bettertobacco/lang/de_ch.json
@@ -19,5 +19,9 @@
 	"item.bettertobacco.tobacco_pickaxe_item": "Tobacco Pickaxe",
 	"item.bettertobacco.tobacco_hoe_item": "Tobacco Hoe",
 	"item.bettertobacco.tobacco_shovel_item": "Tobacco Shovel",
-	"item.bettertobacco.tobacco_sword_item": "Tobacco Sword"
+	"item.bettertobacco.tobacco_sword_item": "Tobacco Sword",
+	"item.bettertobacco.dried_hemp_item": "Dried Hemp",
+	"item.bettertobacco.raw_hemp_item": "Raw Hemp",
+	"item.bettertobacco.hemp_seeds_item": "Hemp Seeds",
+	"item.bettertobacco.joint_item": "Joint"
 }
